# OuterBrainSystem

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  index.original.html  jest.config.cjs  package-lock.json  package.json  request.txt  tsconfig.json  vite.config.ts
backend/: .env.example  pyproject.toml
backend/src/: init_db.py  main.py
backend/src/agents/: __init__.py  base_agent.py  cognitive_debate_agent.py  conclusion_agent.py  distillation_agent.py  flow_analyzer_agent.py  knowledge_graph_agent.py  relation_discoverer.py  research_path_agent.py  socratic_agent.py
backend/src/api/: chat.py  graph.py  notifications.py  sessions.py
backend/src/core/: __init__.py  agent_router.py  agent_types.py  context_manager.py  context_types.py
backend/src/core/providers/: __init__.py  registry.py
backend/src/core/runtime/: __init__.py  base.py  types.py
backend/src/core/session/: __init__.py  manager.py  storage.py  types.py
backend/src/core/tools/: __init__.py  base.py  registry.py
backend/src/db/: __init__.py  router.py
backend/src/graph/: __init__.py  storage.py  types.py
backend/src/llm/: client.py  prompts.py  router.py  schemas.py
backend/src/providers/anthropic/: __init__.py  l2_tools.py  l3_tools.py  runtime.py  tools.py
backend/tests/: test_agent_router.py  test_card_types.py  test_chat_with_agents.py  test_context_manager.py  test_context_types.py  test_distillation_agent.py  test_e2e_context.py  test_l2_tools.py
frontend/: card-types-demo.html  distillation-card-demo.html  index.html  update-imports.sh
(+97 files in other folders)
